# passfit

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/passfit/: data_loader.py  dates.py  engine.py  models.py  normalize.py  render.py  server.py
src/passfit/data/: fares.yaml  passes.yaml  regions.yaml
tests/: conftest.py  e2e_deep.py  e2e_deploy_probe.py  e2e_llm_ab.py  e2e_offpeak_probe.py  e2e_redeploy_probe.py  e2e_smoke.py  test_data.py  test_dates.py  test_engine_flat.py  test_engine_passes.py  test_engine_rebate.py  test_models.py  test_normalize.py  test_tools.py
