[project]
name = "passfit"
version = "0.1.0"
description = "PassFit - 2026 Korean transit pass navigator MCP server"
requires-python = ">=3.12"
dependencies = ["fastmcp>=3.0", "pydantic>=2.7", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passfit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
